--- a/GreedyEater/bin/kr/greedyeater/gadget/view/ProxyLayout.fxml
+++ b/GreedyEater/bin/kr/greedyeater/gadget/view/ProxyLayout.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -18,8 +19,9 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <ButtonBar layoutX="25.0" layoutY="27.0" prefHeight="40.0" prefWidth="360.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="35.0">
+                  <ButtonBar layoutX="61.0" layoutY="27.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="537.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="35.0">
                      <buttons>
+                        <Button mnemonicParsing="false" prefHeight="29.0" prefWidth="105.0" text="Listener" />
                         <Button mnemonicParsing="false" prefHeight="29.0" prefWidth="105.0" text="Forward" />
                         <ToggleButton mnemonicParsing="false" onAction="#hanldeToggleButton" prefHeight="27.0" prefWidth="105.0" text="Intercept" />
                         <Button mnemonicParsing="false" prefHeight="29.0" prefWidth="105.0" text="Drop" />
@@ -35,7 +37,10 @@
                     <tabs>
                       <Tab text="Raw">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TextArea layoutX="99.0" layoutY="-17.0" prefHeight="166.0" prefWidth="778.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                 </children></AnchorPane>
                         </content>
                       </Tab>
                       <Tab text="Summary">
